--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/images/trello-svgrepo-com.svg" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
 
-    <title>Trello Web</title>
+    <title>ToDoListPremium Web</title>
 
     <!--FRONT ROBOTO-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
